--- a/main.html
+++ b/main.html
@@ -16,8 +16,8 @@
 
 	
 		<nav>
-		<a href="actor" id="nav-actor">Actors</a>
-			<a href="quote" id="nav-quote">Quotes</a>
+		<a href="#actor" id="nav-actor">Actors</a>
+			<a href="#quote" id="nav-quote">Quotes</a>
 	</nav>
 	<summary>The film starts with the marriage of Gautam, an Indian Foreign Services officer, and Ira, a spirited social worker. Jaggi, a rank guest at the wedding, creates a scene and gets caught with his friends for gatecrashing the party. 3 years later, Jaggi crosses the border illegally, intending to reach London, but gets caught and taken back to the embassy where Gautam works. Jaggi explains to him that he has to reach London before Monday to his love, being inspired by Gautam's speech. The film flashes back to three months ago.
 
